unpackaged/objects/Paypal_API__mdt.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <defaultValue>&quot;application/x-www-form-urlencoded&quot;</defaultValue>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <defaultValue>&quot;POST&quot;</defaultValue>
        <label>Method</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_URL__c</fullName>
        <label>Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>grant_type__c</fullName>
        <defaultValue>&quot;client_credentials&quot;</defaultValue>
        <label>grant_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Paypal API</label>
    <pluralLabel>Paypal API</pluralLabel>
</CustomObject>